--- a/src/mylangchain_app/05LangGraph/04_LangGraph_ReAct_Memory.ipynb
+++ b/src/mylangchain_app/05LangGraph/04_LangGraph_ReAct_Memory.ipynb
@@ -1450,9 +1450,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m System Message \u001b[0m================================\n",
+      "\n",
+      "\n",
+      "You are an AI assistant designed to answer human questions. \n",
+      "You can use the provided tools to help generate your responses.\n",
+      "\n",
+      "Follow these steps to answer questions:\n",
+      "    1. Carefully read and understand the question.\n",
+      "    2. Use the provided tools to obtain necessary information.\n",
+      "    3. Immediately after using a tool, cite the source using the format below.\n",
+      "    4. Construct an accurate and helpful answer using the tool outputs and citations.\n",
+      "    5. Provide the final answer when you determine it's complete.\n",
+      "\n",
+      "When using tools, follow this format:\n",
+      "    Action: tool_name\n",
+      "    Action Input: input for the tool\n",
+      "\n",
+      "Immediately after receiving tool output, cite the source as follows:\n",
+      "    [Source: tool_name | document_title/item_name | url/file_path]\n",
+      "\n",
+      "For example:\n",
+      "    Action: search_menu\n",
+      "    Action Input: 스테이크\n",
+      "\n",
+      "    (After receiving tool output)\n",
+      "    [Source: search_menu | 스테이크 | ./data/data.txt]\n",
+      "    스테이크에 대한 정보는 다음과 같습니다...\n",
+      "\n",
+      "    Action: search_web\n",
+      "    Action Input: History of AI\n",
+      "\n",
+      "    (After receiving tool output)\n",
+      "    [Source: search_web | AI History | https://en.wikipedia.org/wiki/History_of_artificial_intelligence]\n",
+      "    AI의 역사는 다음과 같이 요약됩니다...\n",
+      "\n",
+      "If tool use is not necessary, answer directly.\n",
+      "\n",
+      "Your final answer should be clear, concise, and directly related to the user's question. \n",
+      "Ensure that every piece of factual information in your response is accompanied by a citation.\n",
+      "\n",
+      "Remember: ALWAYS include these citations for all factual information, tool outputs, and referenced documents in your response. \n",
+      "Do not provide any information without a corresponding citation.\n",
+      "\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "해산물 메뉴에는 어떤 것들이 있나요?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "[Brief explanation: The `search_menu` function is ESSENTIAL here because the question directly asks about restaurant menu items, and this tool is specifically designed to retrieve authorized restaurant menu information from the encrypted database. No general knowledge can substitute for this specialized, confidential data.]  \n",
+      "\n",
+      "After receiving the tool's output, I will cite the source and provide the requested information. Example format:  \n",
+      "[Source: search_menu | 해산물 메뉴 | ./data/menu_encrypted.db]  \n",
+      "\"해산물 메뉴에는 [도구 출력 결과]가 포함됩니다.\"\n",
+      "Tool Calls:\n",
+      "  search_menu (chatcmpl-tool-da06a62e419d4135825ed3ee1bad73e4)\n",
+      " Call ID: chatcmpl-tool-da06a62e419d4135825ed3ee1bad73e4\n",
+      "  Args:\n",
+      "    query: 해산물 메뉴\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: search_menu\n",
+      "\n",
+      "<Document source=\"../data/restaurant_menu.txt\"/>\n",
+      "6. 해산물 파스타\n",
+      "   • 가격: ₩24,000\n",
+      "   • 주요 식재료: 링귀네 파스타, 새우, 홍합, 오징어, 토마토 소스\n",
+      "   • 설명: 알 덴테로 삶은 링귀네 파스타에 신선한 해산물을 듬뿍 올린 메뉴입니다. 토마토 소스의 산미와 해산물의 감칠맛이 조화를 이루며, 마늘과 올리브 오일로 풍미를 더했습니다. 파슬리를 뿌려 향긋한 맛을 더합니다.\n",
+      "</Document>\n",
+      "\n",
+      "---\n",
+      "\n",
+      "<Document source=\"../data/restaurant_menu.txt\"/>\n",
+      "3. 연어 타르타르\n",
+      "   • 가격: ₩18,000\n",
+      "   • 주요 식재료: 노르웨이산 생연어, 아보카도, 케이퍼, 적양파\n",
+      "   • 설명: 신선한 노르웨이산 생연어를 곱게 다져 아보카도, 케이퍼, 적양파와 함께 섞어 만든 타르타르입니다. 레몬 드레싱으로 상큼한 맛을 더했으며, 바삭한 브리오쉬 토스트와 함께 제공됩니다. 전채요리로 완벽한 메뉴입니다.\n",
+      "</Document>\n",
+      "\n",
+      "---\n",
+      "\n",
+      "<Document source=\"../data/restaurant_menu.txt\"/>\n",
+      "7. 랍스터 비스크\n",
+      "   • 가격: ₩28,000\n",
+      "   • 주요 식재료: 랍스터, 생크림, 브랜디, 파프리카\n",
+      "   • 설명: 랍스터 껍질과 육수로 오랜 시간 우려낸 진한 비스크 수프입니다. 생크림으로 부드러운 질감을 더하고 브랜디로 깊은 풍미를 살렸습니다. 작은 랍스터 살을 토핑으로 올려 고급스러움을 더했습니다.\n",
+      "</Document>\n",
+      "\n",
+      "---\n",
+      "\n",
+      "<Document source=\"../data/restaurant_menu.txt\"/>\n",
+      "2. 트러플 리조또\n",
+      "   • 가격: ₩22,000\n",
+      "   • 주요 식재료: 이탈리아산 아르보리오 쌀, 블랙 트러플, 파르미지아노 레지아노 치즈\n",
+      "   • 설명: 크리미한 텍스처의 리조또에 고급 블랙 트러플을 듬뿍 얹어 풍부한 향과 맛을 즐길 수 있는 메뉴입니다. 24개월 숙성된 파르미지아노 레지아노 치즈를 사용하여 깊은 맛을 더했으며, 주문 즉시 조리하여 최상의 상태로 제공됩니다.\n",
+      "</Document>\n",
+      "\n",
+      "---\n",
+      "\n",
+      "<Document source=\"../data/restaurant_menu.txt\"/>\n",
+      "4. 버섯 크림 수프\n",
+      "   • 가격: ₩10,000\n",
+      "   • 주요 식재료: 양송이버섯, 표고버섯, 생크림, 트러플 오일\n",
+      "   • 설명: 양송이버섯과 표고버섯을 오랜 시간 정성스레 끓여 만든 크림 수프입니다. 부드러운 텍스처와 깊은 버섯 향이 특징이며, 최상급 트러플 오일을 살짝 뿌려 고급스러운 향을 더했습니다. 파슬리를 곱게 다져 고명으로 올려 제공됩니다.\n",
+      "</Document>\n",
+      "\n",
+      "---\n",
+      "\n",
+      "<Document source=\"../data/restaurant_menu.txt\"/>\n",
+      "9. 치킨 콘피\n",
+      "   • 가격: ₩23,000\n",
+      "   • 주요 식재료: 닭다리살, 허브, 마늘, 올리브 오일\n",
+      "   • 설명: 닭다리살을 허브와 마늘을 넣은 올리브 오일에 저온에서 장시간 조리한 프랑스 요리입니다. 부드럽고 촉촉한 육질이 특징이며, 로즈메리 감자와 제철 채소를 곁들여 제공합니다. 레몬 제스트를 뿌려 상큼한 향을 더했습니다.\n",
+      "</Document>\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "[Source: search_menu | 해산물 메뉴 | ../data/restaurant_menu.txt]  \n",
+      "해산물 메뉴에는 다음과 같은 항목들이 있습니다:  \n",
+      "\n",
+      "1. **해산물 파스타 (₩24,000)**  \n",
+      "   - 링귀네 파스타, 새우, 홍합, 오징어, 토마토 소스로 구성된 메뉴입니다. 알 덴테 파스타와 신선한 해산물의 조화가 특징입니다.  \n",
+      "\n",
+      "2. **연어 타르타르 (₩18,000)**  \n",
+      "   - 노르웨이산 생연어, 아보카도, 케이퍼, 적양파를 레몬 드레싱과 함께 버무린 전채 요리입니다. 바삭한 브리오쉬 토스트와 함께 제공됩니다.  \n",
+      "\n",
+      "3. **랍스터 비스크 (₩28,000)**  \n",
+      "   - 랍스터 육수와 생크림으로 만든 진한 수프입니다. 브랜디와 파프리카로 풍미를 더했으며, 작은 랍스터 살이 토핑으로 올라갑니다.  \n",
+      "\n",
+      "이 외에도 **트러플 리조또**, **버섯 크림 수프**, **치킨 콘피** 등의 메뉴가 있지만, 해산물을 주재료로 사용하지는 않습니다.  \n",
+      "\n",
+      "[Source: search_menu | 해산물 메뉴 | ../data/restaurant_menu.txt]\n"
+     ]
+    }
+   ],
    "source": [
     "# 그래프 실행\n",
     "#inputs = {\"messages\": [HumanMessage(content=\"해산물 메뉴에는 어떤 것들이 있나요?\")]}\n",
@@ -1500,13 +1636,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "이 중에 하나만 추천해주세요.\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "질문에 메뉴나 옵션에 대한 구체적인 정보가 제공되지 않았기 때문에 어떤 항목을 추천해야 할지 알 수 없습니다. 추천을 위해 다음 중 하나를 명시해 주세요:  \n",
+      "\n",
+      "1. **레스토랑 메뉴 추천**이 필요한 경우:  \n",
+      "   - `search_menu` 함수를 사용해 특정 메뉴(예: \"스테이크\", \"샐러드\")를 검색할 수 있습니다.  \n",
+      "   - 예시: *\"스테이크 메뉴 중 하나만 추천해 주세요\"*  \n",
+      "\n",
+      "2. **웹 기반 정보 추천**이 필요한 경우:  \n",
+      "   - `search_web` 함수로 최신 정보(예: \"2024년 인기 여행지\")를 검색할 수 있습니다.  \n",
+      "   - 예시: *\"여름 휴가 추천 장소 중 하나만 알려주세요\"*  \n",
+      "\n",
+      "필요한 정보를 추가해 주시면 적절한 도구를 사용해 답변드리겠습니다!  \n",
+      "\n",
+      "예시 요청 형식:  \n",
+      "- *\"[레스토랑 이름]의 파스타 메뉴 중 추천해주세요\"*  \n",
+      "- *\"[주제]에 대한 최신 트렌드 하나만 알려주세요\"*\n"
+     ]
+    }
+   ],
    "source": [
     "# 그래프 실행 - 이전 대화 내용을 기억하는지 못하는 문제가 있음 \n",
     "inputs = {\"messages\": [HumanMessage(content=\"이 중에 하나만 추천해주세요.\")]}\n",
-    "messages = graph.invoke(inputs)\n",
+    "messages = my_graph_tc.invoke(inputs)\n",
     "\n",
     "for m in messages['messages']:\n",
     "    m.pretty_print()"
@@ -1516,8 +1679,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`(1) 체크포인터 지정`\n",
-    "- 그래프를 컴파일할 때 체크포인터를 지정"
+    "`MemorySaver 객체사용`\n",
+    "- 체크포인터 지정\n",
+    "- 그래프를 컴파일할 때 Memorysaver 객체를 체크포인터로 지정"
    ]
   },
   {
